k8s/sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decidim-demo-sidekiq-deployment
  labels:
    app: decidim-demo
    tier: sidekiq
spec:
  replicas: 2
  selector:
    matchLabels:
      app: decidim-demo-sidekiq
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 34%
      maxUnavailable: 34%
  template:
    metadata:
      labels:
        app: decidim-demo-sidekiq
    spec:
      containers:
      - name: main
        image: ghcr.io/liquidvotingio/liquid-decidim-demo:latest
        imagePullPolicy: Always
        command: ["/usr/local/bundle/bin/bundle", "exec", "sidekiq", "-C", "config/sidekiq.yml"]
        resources:
          requests:
             cpu: "75m"
        securityContext:
          privileged: false
          procMount: Default
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      imagePullSecrets:
      - name: registry-secret
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
