k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: decidim-demo-service
  labels:
    app: decidim-demo
spec:
  type: ClusterIP
  selector:
    app: decidim-demo
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decidim-demo-deployment
  labels:
    app: decidim-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: decidim-demo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 34%
      maxUnavailable: 34%
  template:
    metadata:
      name: decidim-demo
      labels:
        app: decidim-demo
    spec:
      containers:
      - name: main
        image: ghcr.io/liquidvotingio/liquid-decidim-demo:latest
        imagePullPolicy: Always
        resources:
          requests:
             cpu: "75m"
        # readinessProbe:
        #   httpGet:
        #     path: /robots.txt
        #     port: 3000
        #     scheme: HTTP
        securityContext:
          privileged: false
          procMount: Default
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      # initContainers:
      # - name: migrations
      #   image: ghcr.io/liquidvotingio/liquid-decidim-demo:latest
      #   command:
      #   - rake
      #   - db:abort_if_pending_migrations
      imagePullSecrets:
      - name: registry-secret
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
