k8s/database.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: decidim-demo-postgres
  name: decidim-demo-db
spec:
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  selector:
    app: decidim-demo-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decidim-demo-db
spec:
  selector:
    matchLabels:
      app: decidim-demo-postgres
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: decidim-demo-postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          valueFrom:
            secretKeyRef:
              name: decidim-demo-postgres-config
              key: postgres-dbname
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              name: decidim-demo-postgres-config
              key: postgres-username
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              name: decidim-demo-postgres-config
              key: postgres-password
        image: postgres:10.4
        imagePullPolicy: "IfNotPresent"
        name: decidim-demo-db
        ports:
        - containerPort: 5432
        resources:
          requests:
             cpu: "40m"
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: data
          subPath: decidim-demodb
      hostname: decidim-demo-db
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: decidim-demo-postgres-pvc
