k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: decidim-demo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/acme-http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  rules:
  - host: decidim-demo.liquidvoting.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: decidim-demo-service
              port:
                number: 3000
  tls:
    - hosts:
      - decidim-demo.liquidvoting.io
      secretName: decidim-demo-cert
